--- a/style.css
+++ b/style.css
@@ -1,86 +1,86 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Merriweather', serif;
+  background:url(https://s3.amazonaws.com/codecademy-content/projects/junction/bg.jpg) no-repeat center center fixed;
+  background-size:cover;
+  color:#fff;
+}
+
 .container {
-  max-width: 928px;
-  padding-right: 15px;
+  max-width:940px;
+  text-align:left;
+}
+
+/* Header */
+.header {
+  background:rgba(0,0,0,.5);
+  padding:10px;
+}
+img.top-pic {
+	height:36px;
+  width:36px;
+  float:left;
+  vertical-align:middle;
+  text-align:center;
+  margin: 10px;
+}
+.nav li {
+  color: #fff;
+  display: inline-block;
+  font-size: 14px;
+  padding: 10px 0;
+}
+.nav a {
+	text-decoration:none;
+  color:white;
+}
+.nav a:hover {
+	  background:rgba(0,0,0,.5);
+}
+
+/* Jumbotron */
+.jumbotron {
+  position: relative;
+  top: 50px;
+  text-shadow: 0 2px 3px rgba(0,0,0,.4);
+  background:rgba(0,0,0,.0);
+}
+h1, h3, p {
+  text-align:center;
+  padding: 0 35px;
+}
+
+
+/* Supporting */
+.supporting .col-md-4 {
+  margin-top: 40px;
+  text-shadow: 0 2px 3px rgba(0,0,0,.4);
+}
+
+img.pic {
+  height: 125px;
+  width: 125px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.footer .container {
+  display:block;
+	padding-right: 15px;
   padding-left: 15px;
+  text-align:center;
   margin-right: auto;
   margin-left: auto;
 }
-
-h1, h2, p, a {
-  font-family: 'Helvetica Neue Thin', 'HelveticaNeue-Thin', 'helvetica neue', helvetica, arial, 'lucida grande', sans-serif;
-}
-
-h1 {
-  font-size: 64px;
-  font-weight: 100;
-  margin-bottom: 20px;
-}
-
-a {
-  text-decoration:none;
-  font-size:18px;
-  font-weight: 200;
-  background-color:rgba(238,68,95,0.9);
-  transition:0.5s;
-  color:white;
-  padding: 15px 25px;
-  border-radius:5px;
-}
-
-a:hover {
-	transition:0.5s;
-  text-decoration:none;
-  color:white;
-  background-color:pink;
-}
-
-.main {
-  height: 550px;
-  padding-top: 55px;
-  background:url(https://s3.amazonaws.com/codecademy-content/projects/shutterbugg/intro.jpg) no-repeat center center;
-  background-size:cover;
-}
-
-p {
-  font-size: 26px;
-  font-weight: 200;  
-  margin-bottom: 40px;
-}
-
-.main .container {
-	top:100px;
-}
-.section .row {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  border-bottom: 1px solid #dbdbdb;
-}
-
-.store {
-  text-align: center;
-  border-bottom: 0px;
-  padding-bottom:100px
-}
-
-.footer {
-  border-top: 1px solid #dbdbdb;
-  background-color: #f3f3f3;
-  padding: 20px 0px 80px;
-}
-
-.footer ul {
-  list-style-type: none;
-  padding-left: 0;
-}
-
-.footer li {
-  color: #555555;
-  font-weight: 600;
-}
-
-@media (max-width: 500px) {
-  .col-md-6 img {
-    padding: 50px;
-    width: 100%;
-  }
+.btn {
+  padding: 5px 50px;
+  margin-top:100px; 
+  vertical-align:middle;
+	display: inline-block;
+	position:relative; 
+  background:rgba(0,255,188,0.5);
+  border: none;
+  border-radius: 8px;
 }
