--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ div {
 }
 
 .supporting {
-  background-image: url(s3.amazonaws.com/codecademy-content/projects/bolt-network/diagmonds_@2X.png) repeat center center;
-  background-size: 141px 142px;
+  background-image: url(s3.amazonaws.com/codecademy-content/projects/bolt-network/diagmonds_@2X.png);
+  background-size: cover;
 }
 
 .header .container {
