--- a/bolt/style.css
+++ b/bolt/style.css
@@ -25,7 +25,7 @@ div {
 
 .supporting {
   background-image: url(s3.amazonaws.com/codecademy-content/projects/bolt-network/diagmonds_@2X.png);
-  background-size: 141px 142px;
+  background-size: cover;
 }
 
 .header .container {
@@ -39,9 +39,8 @@ div {
 
 .header .container ul {
 	list-style:none;
-  white-space:nowrap;
 }
-.header .container li {
+.header .container li{
 	display:inline;
 }
 
@@ -50,7 +49,10 @@ div {
   border:1px solid #0393ff;
   color:#0393ff;
   background:black;
-  
+}
+
+.btn-default {
+	
 }
 
 .btn:hover {
@@ -79,17 +81,16 @@ div {
   border-top:black;
   border-right: black;
   border-left:black;
+  border-bottom:1px solid white;
+  border-radius:0px;
 }
 
-textarea:focus, input:focus{
-    outline: 0;
+#browsing:focus { 
+  transition: 1s;
+  border-bottom: 1px solid #0393ff;
+  box-shadow:0px 0px 0px;
+  outline: 0px;
 }
-/*
-.form-control {
-  outline:none;
-	box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-}
-*/
 
 .supporting {
 	background:url(diagmonds_@2X.png);
@@ -100,6 +101,12 @@ textarea:focus, input:focus{
   text-align:center;
   padding: 50px;
 }
+.supporting .container .thumbnail {
+  background:transparent; 
+  border: none;
+  padding: 0;
+}
+
 .supporting .container h2 {
 	color:#0393ff;
 }
@@ -121,8 +128,9 @@ img {
   padding:0 15px;
 }
 
-.footer ul {
+.footer ul, .footer li {
 	list-style:none;
+  white-space:no-wrap;
 }
 
 .footer li {
@@ -133,9 +141,9 @@ img {
 lh {
 	color:white;
   font-weight:bold;
+  white-space:nowrap;
 }
 
 .dist {
 	margin: 15px;
-  white-space:no-wrap;
 }
