--- a/style.css
+++ b/style.css
@@ -1,14 +1,8 @@
 html, body {
-  font-family: "Oxygen", sans-serif; 
-  font-weight: 300; 
   margin: 0;
   padding: 0;
   background:black;
   color:white;
-}
-
-h2 {
-	color:#0393ff;
 }
 
 div {
@@ -16,134 +10,100 @@ div {
 }
 
 .container {
-  max-width: 970px;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+	max-width:940px;
 }
 
-.supporting {
-  background-image: url(s3.amazonaws.com/codecademy-content/projects/bolt-network/diagmonds_@2X.png);
-  background-size: cover;
-}
-
-.header .container {
-	padding:50px;
-}
-
-.header .container img {
-	width:180px;
-  height:34px;
-}
-
-.header .container ul {
+ul {
 	list-style:none;
 }
-.header .container li{
+
+li {
 	display:inline;
 }
 
-.btn, button {
+a {
 	text-decoration:none;
-  border:1px solid #0393ff;
-  color:#0393ff;
-  background:black;
 }
 
-.btn-default {
-	
+.disp {
+	margin:50px 20px;
 }
 
-.btn:hover {
-	background:#0393ff;
-  border: 1px solid black;
-  color:white;
+.jumbotron {
+	background: url(https://s3.amazonaws.com/codecademy-content/projects/bass/bg.jpg) no-repeat center center;
+  background-size:cover;
+  height:800px;
+  margin:0;
 }
 
 .logo {
+	width:85px;
+  height:85px;
+}
+
+.btn-default {
+  border:0;
+  color:white;
+  border-radius:0;
+  margin: 3px;
+}
+
+.press {
+	background:rgb(255,0,0);
+}
+
+.not-pressed {
+	background:black;
+}
+
+.thumbnail {
+	background:transparent;
+  border:none;
+}
+
+.main {
+	vertical-align:middle;
+  padding:100px;
+}
+
+.gr {
+	background:#333333;
+}
+
+.texty-text {
+	padding:40px;
+}
+
+.support {
+  background:url(https://s3.amazonaws.com/codecademy-content/projects/bass/feature.jpg) no-repeat center center;
+  background-size:cover;
+  height:400px;
+  text-align:center;
+  padding:150px;
+}
+
+.footer a {
+	color:gray;
+  text-decoration:none;
+}
+
+.footer {
+	padding:50px;
+}
+
+.footer h4 {
+	padding:0 0 0 50px;
+}
+
+.footer ul {
+  display:block;
   float:left;
 }
 
-.main .container {
-	text-align:center;
-  padding:200px 100px;
-}
-.main .container .btn {
-	margin:50px;
-}
-.main .container .btn1 {
-	margin: 5px ;
-}
-
-.main .container .browsing {
-	background:black;
-  border-top:black;
-  border-right: black;
-  border-left:black;
-  border-bottom:1px solid white;
-  border-radius:0px;
-}
-
-#browsing:focus { 
-  transition: 1s;
-  border-bottom: 1px solid #0393ff;
-  box-shadow:0px 0px 0px;
-  outline: 0px;
-}
-
-.supporting {
-	background:url(diagmonds_@2X.png);
-  background-repeat: repeat-y|repeat-x;
-}
-
-.supporting .container {
-  text-align:center;
-  padding: 50px;
-}
-.supporting .container .thumbnail {
-  background:transparent; 
-  border: none;
-  padding: 0;
-}
-
-.supporting .container h2 {
-	color:#0393ff;
-}
-
-img {
-	padding:5px;
-}
-
-.feature {
-	background:url(https://s3.amazonaws.com/codecademy-content/projects/bolt-network/feature.jpg) no-repeat center center;
-  background-size: cover;
-  text-align:center;
-  height: 350px;
-  position:relative;
-  padding-top:100px;
-}
-
-.feature .container {
-  padding:0 15px;
-}
-
-.footer ul, .footer li {
-	list-style:none;
-  white-space:no-wrap;
-}
-
 .footer li {
-	display:block;
-  color:#0393ff;
+	display: list-item;
 }
 
-lh {
-	color:white;
-  font-weight:bold;
-  white-space:nowrap;
-}
-
-.dist {
-	margin: 15px;
+.col-md-2 {
+	float:left;
 }
