--- a/newsroom/style.css
+++ b/newsroom/style.css
@@ -6,10 +6,6 @@ html, body {
   background-color:#F2F2F2;
 }
 
-.container {
-	max-width:980px;
-}
-
 ul {
 	list-style:none;
 }
@@ -22,13 +18,19 @@ a {
 	text-decoration:none;
 }
 
-.underlined {
-	text-decoration:underline;
+p {
+	font-size:.5em;
+}
+
+h1,h2,h3,h4,h5,h6 {
+ font-family:'Montserrat', sans-serif;
 }
 
 .header {
 	background:black;
+  vertical-align:middle;
 }
+
 .logo {
 	width:200px;
   height:100px;
@@ -41,21 +43,48 @@ a {
   height:500px;
 }
 
+.jumbotron .container h4 {
+	padding:15px 0;
+  font-weight:0;
+  font-family:'Montserrat', sans-serif;
+}
+
+.underline-text-title {
+  border-bottom: solid .1em #1A77FF;
+  display: inline;
+  padding-bottom: 3px;
+}
+  
+.underline-text {
+  border-bottom: solid .15em #1A77FF;
+  display: inline;
+  padding-bottom: 1px;
+  font-weight:600;
+}
+
+.row {
+	padding:5px;
+  margin:15px;
+}
+
 button {
 	text-align:center;
   background:black;
   border:transparent;
   border-bottom:1px solid #1A77FF;
-  font-family:'Lato',Sans-serif;
   color:white;
+  font-size:12px;
+  font-family:'Montserrat',Sans-serif;
+  height:25px;
 }
-
 #search {
 	width:250px;
   background:black;
   border-radius:0;
   border:0;
   border-bottom:1px solid white;
+  font-size:12px;
+  height:25px;
 }
 #search:focus {
 	border-bottom:1px solid #1A77FF;
@@ -71,7 +100,7 @@ button {
   border-radius:0px;
   height:35px;
   vertical-align:middle;
-  font-size:.8em;
+  font-size:.9em;
   font-family:'Lato',sans-serif;
   font-weight:100;
   margin:0;
@@ -92,21 +121,25 @@ button {
 .wh {
 	color:black;
   background-color:white;
-  padding:15px;
 }
 
 .bl {
 	background-color:rgb(21, 34, 48);
-  padding:15px;
+}
+.main {
+	margin:15px 15px 0 ;
+}
+
+.date {
+	color:gray;
 }
 
 .support .container {
-	background:url(https://s3.amazonaws.com/codecademy-content/projects/newsroom/ad.jpg) no-repeat center center;
-  background-size:cover;
-  width:80%;
+  margin:30px;
+  text-align:center;
 }
 
-.footer .container {
-  background-color:rgb(21, 34, 48);
-  vertical-align:center;
+.footer {
+	background-color:rgb(21, 34, 48);
+  vertical-align:middle;
 }
