--- a/newsroom/style.css
+++ b/newsroom/style.css
@@ -4,10 +4,12 @@ html, body {
   color:white;
   font-family:'Lato', Sans-serif;
   background-color:#F2F2F2;
+  font-size: 14px;
+  line-height: 1.42857143;
 }
 
-ul {
-	list-style:none;
+* {
+  box-sizing:border-box;
 }
 
 li {
@@ -26,14 +28,94 @@ h1,h2,h3,h4,h5,h6 {
  font-family:'Montserrat', sans-serif;
 }
 
+.main h3 {
+	font-weight:bold;
+}
+
+div {
+	display:block;
+}
+
 .header {
 	background:black;
-  vertical-align:middle;
+  min-height:80px;
 }
 
 .logo {
-	width:200px;
-  height:100px;
+	width:250px;
+  height:80px;
+}
+
+.search {
+	float:right;
+  margin:25px 0 0 0;
+}
+
+form {
+	display:block;
+  margin-top:0em;
+  margin-bottom:25px;
+}
+
+.search-form input {
+	background:transparent;
+  border:0;
+  border-bottom:1px solid #fff;
+  color:#fff;
+  height:30px;
+  width:240px;
+  font-family:inherit;
+  font-size:inherit;
+  line-height:inherit;
+  margin:0;
+  cursor:auto;
+  padding:1px;
+  text-rendering:auto;
+  letter-spacing:normal;
+  word-spacing:normal;
+  text-transform:none;
+  text-indent:none;
+  display:inline-block;
+  text-align:start;
+}
+
+.search-btn {
+	background:transparent;
+  border:0;
+  border-bottom:1px solid #1a77ff;
+  color:#fff;
+  height:30px;
+  margin:0 0 0 10px;
+  padding:0 10px;
+	transition:.5s;
+}
+
+button {
+  align-items:flex-start;
+  text-align:center;
+	font-family:inherit;
+  font-size:inherit;
+  line-height:inherit;
+  cursor:pointer;
+  text-transform:none;
+  overflow:visible;
+  font:inherit;
+}
+
+.menu, .nav>li>a {
+  background-color:rgb(21, 34, 48);
+  color:white;
+}
+
+.search-btn:hover, .nav>li>a:hover {
+  cursor: pointer; 
+	transition: background .5s;
+  background-color:#1A77FF;
+  
+}
+
+.nav {
+	margin: 0 -15px;
 }
 
 .jumbotron {
@@ -43,79 +125,19 @@ h1,h2,h3,h4,h5,h6 {
   height:500px;
 }
 
-.jumbotron .container h4 {
-	padding:15px 0;
-  font-weight:0;
-  font-family:'Montserrat', sans-serif;
-}
-
 .underline-text-title {
   border-bottom: solid .1em #1A77FF;
   display: inline;
   padding-bottom: 3px;
+  line-height:1.3;
 }
   
 .underline-text {
-  border-bottom: solid .15em #1A77FF;
+  border-bottom: solid .18em #1A77FF;
   display: inline;
   padding-bottom: 1px;
   font-weight:600;
-}
-
-.row {
-	padding:5px;
-  margin:15px;
-}
-
-button {
-	text-align:center;
-  background:black;
-  border:transparent;
-  border-bottom:1px solid #1A77FF;
-  color:white;
-  font-size:12px;
-  font-family:'Montserrat',Sans-serif;
-  height:25px;
-}
-#search {
-	width:250px;
-  background:black;
-  border-radius:0;
-  border:0;
-  border-bottom:1px solid white;
-  font-size:12px;
-  height:25px;
-}
-#search:focus {
-	border-bottom:1px solid #1A77FF;
-}
-
-.nav {
-	background-color:rgb(21, 34, 48);
-  height:35px;
-}
-
-.btn {
-	border:none;
-  border-radius:0px;
-  height:35px;
-  vertical-align:middle;
-  font-size:.9em;
-  font-family:'Lato',sans-serif;
-  font-weight:100;
-  margin:0;
-  background-color:rgb(21, 34, 48);
-  color:white;
-  transition:.5s;
-}
-
-.btn:hover {
-	transition:.5s;
-  background-color:#1A77FF;
-}
-
-.pressed {
-  background:#1A77FF;
+  line-height:1.3;
 }
 
 .wh {
@@ -128,6 +150,15 @@ button {
 }
 .main {
 	margin:15px 15px 0 ;
+}
+.main .container .row {
+	padding-right:15px;
+  padding-bottom:15px;
+  padding-left: 15px;
+}
+
+.main .container .bottom {
+padding-bottom:30px;
 }
 
 .date {
@@ -142,4 +173,12 @@ button {
 .footer {
 	background-color:rgb(21, 34, 48);
   vertical-align:middle;
+}
+
+
+@media (max-width: 715px) {
+  .nav li {
+    text-align: center;
+    width: 100%;
+  }
 }
