--- a/newsroom/style.css
+++ b/newsroom/style.css
@@ -20,8 +20,36 @@ a {
 	text-decoration:none;
 }
 
-p {
-	font-size:.5em;
+.jumbotron .container a.title-1 {
+	text-decoration:none;
+  color:white;
+  transition:1s;
+}
+
+.jumbotron .container a.title-1:hover {
+	transition:3s;
+  color:#800000;
+}
+
+a.news-1 {
+	text-decoration:none;
+  color:black;
+  transition:1s;
+}
+
+a.news-2 {
+	text-decoration:none;
+  color:white;
+  transition:1s;
+}
+
+a.news-1:hover, a.news-2:hover {
+	color:#0393ff;
+  transition:1s;
+}
+
+.jumbotron .container p {
+	font-size:1.2em;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -43,12 +71,19 @@ div {
 
 .logo {
 	width:250px;
-  height:80px;
+  height:80px; 
 }
 
 .search {
 	float:right;
   margin:25px 0 0 0;
+}
+
+#browse:focus { 
+  transition: 1s;
+  border-bottom: 1px solid #0393ff;
+  box-shadow:0px 0px 0px;
+  outline: 0px;
 }
 
 form {
@@ -77,6 +112,7 @@ form {
   text-indent:none;
   display:inline-block;
   text-align:start;
+  transition:1s;
 }
 
 .search-btn {
@@ -87,7 +123,7 @@ form {
   height:30px;
   margin:0 0 0 10px;
   padding:0 10px;
-	transition:.5s;
+	transition:1s;
 }
 
 button {
@@ -105,17 +141,25 @@ button {
 .menu, .nav>li>a {
   background-color:rgb(21, 34, 48);
   color:white;
+  border-radius:0;
+  border:0;
+  font-weight:100;
+  margin:0;
+  transition:1s;
 }
+
+.nav>li>a.active{
+  background-color:#1A77FF;
+  color:white;
+  font-weight:100;
+  transition:1s;
+} 
 
 .search-btn:hover, .nav>li>a:hover {
   cursor: pointer; 
-	transition: background .5s;
+	transition: background 1s;
   background-color:#1A77FF;
-  
-}
-
-.nav {
-	margin: 0 -15px;
+  color:white;
 }
 
 .jumbotron {
@@ -123,6 +167,10 @@ button {
   background-size:cover;
   vertical-align:middle;
   height:500px;
+}
+
+.jumbotron .container {
+  padding-right:35%;
 }
 
 .underline-text-title {
@@ -165,9 +213,12 @@ padding-bottom:30px;
 	color:gray;
 }
 
-.support .container {
-  margin:30px;
-  text-align:center;
+.support {
+	margin: 50px 0;
+}
+
+.support .container img {
+	width:100%;
 }
 
 .footer {
@@ -175,10 +226,24 @@ padding-bottom:30px;
   vertical-align:middle;
 }
 
+.footer a {
+	color:white;
+}
 
-@media (max-width: 715px) {
+.footer a:hover {
+	color:#1A77FF;
+}
+
+@media (max-width: 740px) {
   .nav li {
     text-align: center;
-    width: 100%;
+    width: 110%;
+    left:-5%;
+  }
+  .header {
+  	text-align:center;
+  }
+  .footer .container ul {
+    display:block-inline;
   }
 }
