--- a/style.css
+++ b/style.css
@@ -1,109 +1,249 @@
 html, body {
   margin: 0;
   padding: 0;
-  background:black;
   color:white;
+  font-family:'Lato', Sans-serif;
+  background-color:#F2F2F2;
+  font-size: 14px;
+  line-height: 1.42857143;
 }
 
-div {
-	display:block;
-}
-
-.container {
-	max-width:940px;
-}
-
-ul {
-	list-style:none;
+* {
+  box-sizing:border-box;
 }
 
 li {
-	display:inline;
+	display:inline-block;
 }
 
 a {
 	text-decoration:none;
 }
 
-.disp {
-	margin:50px 20px;
+.jumbotron .container a.title-1 {
+	text-decoration:none;
+  color:white;
+  transition:1s;
 }
 
-.jumbotron {
-	background: url(https://s3.amazonaws.com/codecademy-content/projects/bass/bg.jpg) no-repeat center center;
-  background-size:cover;
-  height:800px;
-  margin:0;
+.jumbotron .container a.title-1:hover {
+	transition:3s;
+  color:#800000;
+}
+
+a.news-1 {
+	text-decoration:none;
+  color:black;
+  transition:1s;
+}
+
+a.news-2 {
+	text-decoration:none;
+  color:white;
+  transition:1s;
+}
+
+a.news-1:hover, a.news-2:hover {
+	color:#0393ff;
+  transition:1s;
+}
+
+.jumbotron .container p {
+	font-size:1.2em;
+}
+
+h1,h2,h3,h4,h5,h6 {
+ font-family:'Montserrat', sans-serif;
+}
+
+.main h3 {
+	font-weight:bold;
+}
+
+div {
+	display:block;
+}
+
+.header {
+	background:black;
+  min-height:80px;
 }
 
 .logo {
-	width:85px;
-  height:85px;
+	width:250px;
+  height:80px; 
 }
 
-.btn-default {
+.search {
+	float:right;
+  margin:25px 0 0 0;
+}
+
+#browse:focus { 
+  transition: 1s;
+  border-bottom: 1px solid #0393ff;
+  box-shadow:0px 0px 0px;
+  outline: 0px;
+}
+
+form {
+	display:block;
+  margin-top:0em;
+  margin-bottom:25px;
+}
+
+.search-form input {
+	background:transparent;
   border:0;
+  border-bottom:1px solid #fff;
+  color:#fff;
+  height:30px;
+  width:240px;
+  font-family:inherit;
+  font-size:inherit;
+  line-height:inherit;
+  margin:0;
+  cursor:auto;
+  padding:1px;
+  text-rendering:auto;
+  letter-spacing:normal;
+  word-spacing:normal;
+  text-transform:none;
+  text-indent:none;
+  display:inline-block;
+  text-align:start;
+  transition:1s;
+}
+
+.search-btn {
+	background:transparent;
+  border:0;
+  border-bottom:1px solid #1a77ff;
+  color:#fff;
+  height:30px;
+  margin:0 0 0 10px;
+  padding:0 10px;
+	transition:1s;
+}
+
+button {
+  align-items:flex-start;
+  text-align:center;
+	font-family:inherit;
+  font-size:inherit;
+  line-height:inherit;
+  cursor:pointer;
+  text-transform:none;
+  overflow:visible;
+  font:inherit;
+}
+
+.menu, .nav>li>a {
+  background-color:rgb(21, 34, 48);
   color:white;
   border-radius:0;
-  margin: 3px;
+  border:0;
+  font-weight:100;
+  margin:0;
+  transition:1s;
 }
 
-.press {
-	background:rgb(255,0,0);
+.nav>li>a.active{
+  background-color:#1A77FF;
+  color:white;
+  font-weight:100;
+  transition:1s;
+} 
+
+.search-btn:hover, .nav>li>a:hover {
+  cursor: pointer; 
+	transition: background 1s;
+  background-color:#1A77FF;
+  color:white;
 }
 
-.not-pressed {
-	background:black;
+.jumbotron {
+	background: url(https://s3.amazonaws.com/codecademy-content/projects/newsroom/bass-bg.jpg) no-repeat center center;
+  background-size:cover;
+  vertical-align:middle;
+  height:500px;
 }
 
-.thumbnail {
-	background:transparent;
-  border:none;
+.jumbotron .container {
+  padding-right:35%;
 }
 
+.underline-text-title {
+  border-bottom: solid .1em #1A77FF;
+  display: inline;
+  padding-bottom: 3px;
+  line-height:1.3;
+}
+  
+.underline-text {
+  border-bottom: solid .18em #1A77FF;
+  display: inline;
+  padding-bottom: 1px;
+  font-weight:600;
+  line-height:1.3;
+}
+
+.wh {
+	color:black;
+  background-color:white;
+}
+
+.bl {
+	background-color:rgb(21, 34, 48);
+}
 .main {
-	vertical-align:middle;
-  padding:100px;
+	margin:15px 15px 0 ;
+}
+.main .container .row {
+	padding-right:15px;
+  padding-bottom:15px;
+  padding-left: 15px;
 }
 
-.gr {
-	background:#333333;
+.main .container .bottom {
+padding-bottom:30px;
 }
 
-.texty-text {
-	padding:40px;
+.date {
+	color:gray;
 }
 
 .support {
-  background:url(https://s3.amazonaws.com/codecademy-content/projects/bass/feature.jpg) no-repeat center center;
-  background-size:cover;
-  height:400px;
-  text-align:center;
-  padding:150px;
+	margin: 50px 0;
 }
 
-.footer a {
-	color:gray;
-  text-decoration:none;
+.support .container img {
+	width:100%;
 }
 
 .footer {
-	padding:50px;
+	background-color:rgb(21, 34, 48);
+  vertical-align:middle;
 }
 
-.footer h4 {
-	padding:0 0 0 50px;
+.footer a {
+	color:white;
 }
 
-.footer ul {
-  display:block;
-  float:left;
+.footer a:hover {
+	color:#1A77FF;
 }
 
-.footer li {
-	display: list-item;
-}
-
-.col-md-2 {
-	float:left;
+@media (max-width: 740px) {
+  .nav li {
+    text-align: center;
+    width: 110%;
+    left:-5%;
+  }
+  .header {
+  	text-align:center;
+  }
+  .footer .container ul {
+    display:block-inline;
+  }
 }
